fix: fix wrong css logic on smaller screen

--- a/assets/css/output.css
+++ b/assets/css/output.css
@@ -1370,7 +1370,7 @@
   }
 }
 
-@media only screen and (max-width: 576px) {
+@media only screen and (width < 1024px) {
   #logo-hide-mobile {
     display: none;
   }
